2000-08-09  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (dispatch) Treat an "owner" command as
	a "bounce" during inform() if a bad address was supplied.

	* lib/Mj/MailOut.pm (handle_bounce):  Return the bad
	address one was found (this does not account for multiple
	bad addresses in one error message) for logging purposes.

	* bin/mj_wwwadm, lib/Mj/Format.pm (who):  Show bounce diagnostics.

	* lib/Mj/List.pm (bounce_add),  lib/Mj/SubscriberList.pm: 
	Add bounce diagnostics to saved/displayed data.

	* lib/Mj/Deliver/Dest.pm, lib/Mj/Deliver/Envelope.pm:
	Report non-fatal failures during RCPT TO as pseudo-exim bounces
	to the message sender. (Thanks to Paul Hancock.)

2000-08-08  Michael Yount <csf@moscow.com>

	* files/en/wwwadm_head, files/en/wwwadm_help:  Move the 
	command form and introduction from mj_wwwadm to separate files
	to allow easier customization.

	* lib/Mj/CommandProps.pm, lib/Mj/Parser.pm (parse_args):
	Split variable names in the configdef and configshow commands
	on either commas or spaces.

2000-08-07  Michael Yount <csf@moscow.com>
 
	* lib/Mj/Config.pm (set):  Initialize value if it is not 
	defined.  (Thanks to Todd Goodman.)

2000-08-06  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm (_createlist):  Create the archive
	directory unless "noarchive" mode is specified.  Generate
	a password randomly.  Send the "new_list" file to the 
	owner unless "nowelcome" mode was specified.
	Add "destroy" mode, which will remove a list by renaming
	its directory, but only if there are no subscribers.
	Destroy mode also regenerates the aliases.

2000-08-05  Michael Yount <csf@moscow.com>

	* lib/Mj/List.pm (make_setting):  Allow nomail-return to
	work for vacations that are not timed.

2000-08-04  Michael Yount <csf@moscow.com>

	* bin/mj_email, bin/mj_enqueue:  delete unneeded envvars.

	* bin/mj_queuerun:  randomize directories and files. 
	Fix indentation.  

	* bin/mj_wwwadm:  simplify command form maintenance.
